Removed output data file and updated gitignore to make sure that it isn't added back.  Update datatype with standard names.  Updated glider_netcdf_writer to use status_flag instead of qc for flag variables.

--- a/.gitignore
+++ b/.gitignore
@@ -51,7 +51,9 @@ coverage.xml
 # Sphinx documentation
 docs/_build/
 
+# Don't waste space on test data and output
 test_data/*
+*.nc
 
 # Ignore VIM swap files
 *.swp
